# copilotkit-chatagent

./: .gitignore  DOCX.md  README.md  docker-compose.yml
agent/: .env.example  .gitignore  Dockerfile  embed_data.py  langgraph.json  pyproject.toml
agent/agent/: demo.py  embed_data.py  employees.json  generate_employee.py  math_agent.py  retrieve_agent.py  test_rag_python_sdk.py  test_retriever.py
agent/chroma/: chroma.sqlite3
ui/: Dockerfile  package.json  pnpm-lock.yaml
ui/app/: layout.tsx  page.tsx
